# valthrun-driver-kernel

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.MD  Sign-Driver.ps1  Strip-Driver.cff  Strip-Driver.ps1  build.rs  install-driver.ps1  rustfmt.toml
.cargo/: config.toml  link.def
.github/workflows/: CI-Build.ps1  Install-WDK.ps1  artifact_upload.sh  build-driver-uefi.ps1  build-driver.ps1  invoke-mapper.ps1  rust.yml
driver/: Cargo.toml
driver-interface/: Cargo.toml
driver-interface/src/: lib.rs
driver-standalone/: Cargo.toml  build.rs
driver-standalone/.cargo/: config.toml
driver-standalone/src/: imports.rs  lib.rs  panic_hook.rs
driver-uefi/: Cargo.toml  build.rs
driver-uefi/.cargo/: config.toml  link.def
driver-uefi/src/: entry.rs  imports.rs  lib.rs  logger.rs  panic_hook.rs
driver/.cargo/: config.toml
driver/src/: device.rs  imports.rs  kb.rs  lib.rs  logger.rs  mouse.rs  offsets.rs  panic_hook.rs  pmem.rs  process_protection.rs  status.rs  winver.rs
driver/src/handler/: cs_module.rs  init.rs  input.rs  memory_read.rs  memory_write.rs  metrics.rs  mod.rs  module.rs  protect.rs
driver/src/metrics/: client.rs  crypto.rs  data.rs  device.rs  error.rs  heartbeat.rs  http.rs  mod.rs  pub_key.pem
driver/src/util/: kprocess.rs  mod.rs  msgbox.rs  tcp.rs  time.rs
driver/src/util/io/: mod.rs
driver/src/util/rng/: win32.rs
driver/src/wsk/: address.rs  buffer.rs  error.rs  imports.rs  mod.rs
driver/src/wsk/sys/: mod.rs
hypervisor/: Cargo.toml  build.rs
hypervisor/.cargo/: config.toml
hypervisor/src/: cpu.rs  cpu_state.rs  cpu_states.rs  ept.rs  lib.rs  logger.rs  mem.rs  msr.rs  panic_hook.rs  processor.rs
hypervisor/src/logging/: dpc.rs  fmt.rs  mod.rs  queue.rs
hypervisor/src/paging/: entry.rs  mod.rs  table.rs
hypervisor/src/utils/: segment.rs
hypervisor/src/vm/: exit.rs  exit_handler.rs  mod.rs
hypervisor/src/vmx/: constants.rs  control.rs  exit.rs  guest_config.rs  mod.rs
include/: headers.h
src/: device.rs  device_varhal.rs  imports.rs  kb.rs  lib.rs  logger.rs  mouse.rs  offsets.rs  panic_hook.rs  pmem.rs  process_protection.rs  status.rs  winver.rs
src/handler/: cs_module.rs  input.rs  memory_read.rs  mod.rs  protect.rs
src/io/: buffered.rs
src/kapi/: allocator.rs  device.rs  event.rs  fast_mutex.rs  functions.rs  irp.rs  mem.rs  mod.rs  module.rs  object.rs  process.rs  string.rs
src/kapi/seh/: exception.rs  mod.rs  wrapper.rs
src/kdef/: debug.rs  driver.rs  fast_mutex.rs  irp.rs  irql.rs  kbdclass.rs  mm.rs  mod.rs  mouclass.rs  ob.rs  object.rs  pool.rs  process.rs
src/metrics/: data.rs  error.rs  http.rs  mod.rs
src/util/: imports.rs  mod.rs  rng.rs  tcp.rs  time.rs
src/util/imports/: ll.rs  mod.rs  module.rs  system.rs  system_ll.rs
src/util/rng/: mod.rs  win32.rs
src/wsk/: address.rs  buffer.rs  error.rs  imports.rs  mod.rs
utils/imports/: Cargo.toml  README.MD
utils/imports/src/: error.rs  lib.rs  ll.rs  macro.rs  table.rs  utils.rs
utils/imports/src/provider/: mod.rs  system.rs  system_ll.rs
utils/kalloc/: Cargo.toml
utils/kalloc/src/: allocator.rs  imports.rs  lib.rs
utils/kapi/: Cargo.toml  README.MD
utils/kapi-kmodule/: Cargo.toml
utils/kapi-kmodule/src/: def.rs  imports.rs  imports_module.rs  lib.rs  module.rs
utils/kapi/src/: allocator.rs  device.rs  event.rs  fast_mutex.rs  imports.rs  irp.rs  irql.rs  lib.rs  mdl.rs  object.rs  process.rs  status.rs  thread.rs  time.rs  timer.rs  waitable.rs
utils/kdef/: Cargo.toml
utils/kdef/src/: debug.rs  fast_mutex.rs  irp.rs  lib.rs  mouclass.rs  ob.rs  object.rs  process.rs  timer.rs
utils/kernelbase/: Cargo.toml
utils/kernelbase/src/: def.rs  lib.rs  resolve.rs  utils.rs
utils/pattern/: Cargo.toml
utils/pattern/src/: lib.rs
utils/seh/: Cargo.toml
utils/seh/src/: lib.rs  mem.rs  wrapper.asm  wrapper.rs
utils/wdk-locator/: Cargo.toml
utils/wdk-locator/src/: lib.rs
utils/wsk/: Cargo.toml
utils/wsk/src/: address.rs  buffer.rs  error.rs  imports.rs  instance.rs  lib.rs  registration.rs
utils/wsk/sys/: Cargo.toml  build.rs
utils/wsk/sys/src/: lib.rs
