[workspace]
resolver = "2"
members = [
    "shared",

    "utils/wdk-locator",
    "utils/kalloc",
    "utils/kdef",
    "utils/seh",
    "utils/kapi-kmodule",
    "utils/kapi",
    "utils/imports",
    "utils/wsk",

    "driver",
    "hypervisor",

    "driver-uefi",
    "driver-standalone",
]

[profile.dev]
# Opt-Level of 1 is required to keep stack size small.
# Important as we only got 8k stack size and allocating all structs
# on the stack even with Box::new() is expensive.
opt-level = 1
panic = "abort"
# lto = true

[profile.release]
panic = "abort"
lto = true
