[workspace]
resolver = "2"
members = [
    "valthrun-driver-protocol",

    "utils/kernelbase",
    "utils/wdk-locator",
    "utils/kalloc",
    "utils/kdef",
    "utils/seh",
    "utils/kapi-kmodule",
    "utils/kapi",
    "utils/imports",
    "utils/wsk",
    "utils/pattern",

    "driver",
    "driver-uefi",
    "driver-standalone",
    "driver-interface",
]

[workspace.package]
version = "0.3.0"
edition = "2021"

[profile.dev]
# Opt-Level of 1 is required to keep stack size small.
# Important as we only got 8k stack size and allocating all structs
# on the stack even with Box::new() is expensive.
opt-level = 1
panic = "abort"
# lto = true

[profile.release]
panic = "abort"
lto = true
