[package]
name = "driver-standalone"
version = "0.2.2"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
wdk-locator = { version = "0.1.0", path = "../utils/wdk-locator" }

[dependencies]
log = "0.4.19"
anyhow = { version = "1.0", default-features = false }
obfstr = "0.4.3"
kapi = { version = "0.1.0", path = "../utils/kapi" }
kapi-kmodule = { version = "0.1.0", path = "../utils/kapi-kmodule" }
kdef = { version = "0.1.0", path = "../utils/kdef" }
seh = { version = "0.1.0", path = "../utils/seh" }
utils-imports = { version = "0.1.0", path = "../utils/imports" }
driver = { version = "0.2.1", path = "../driver" }
kalloc = { version = "0.1.0", path = "../utils/kalloc" }
utils-kernelbase = { version = "0.1.0", path = "../utils/kernelbase" }
lazy_link = "0.1.1"

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang/compiler-builtins"
features = ["mem"]

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = ["wdm", "ntstatus", "impl-default"]
