[package]
name = "driver"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
anyhow = "1.0.72"
bindgen = "0.68.1"
cc = "1.0.79"
winreg = "0.50.0" 

[dependencies]
log = "0.4.19"
anyhow = { version = "1.0", default-features = false }
modular-bitfield = "0.11.2"
obfstr = "0.4.3"
valthrun-driver-shared = { path = "../shared" }
once_cell = { version = "1.18.0", default-features = false, features = ["alloc"] }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
httparse = { version = "1.8.0", default-features = false }
embedded-io = { version = "0.6.0", features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
embedded-tls = { version = "0.16.0", default-features = false, features = ["log", "alloc"] }
rand_core = { version = "0.6.4", features = ["alloc"] }
utils-imports = { version = "0.1.0", path = "../utils/imports" }
kapi = { version = "0.1.0", path = "../utils/kapi" }
kapi-kmodule = { version = "0.1.0", path = "../utils/kapi-kmodule" }
kdef = { version = "0.1.0", path = "../utils/kdef" }
seh = { version = "0.1.0", path = "../utils/seh" }
rsa = { version = "0.9.2", default-features = false, features = ["u64_digit", "pem"] }
sha1 = { version = "0.10.6", default-features = false, features = [ ]}
base64 = { version = "0.21.4", default-features = false, features = [ "alloc" ]}
serde_json = { version = "1.0.107", default-features = false, features = [ "alloc" ]}
aes-gcm = "0.10.3"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang/compiler-builtins"
features = [ "mem" ]

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = [
    "wdm",
    "ntstatus",
    "impl-default"
]
