[package]
name = "vtk-hypervisor"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
wdk-locator = { version = "0.1.0", path = "../utils/wdk-locator" }

[dependencies]
log = "0.4.19"
obfstr = "0.4.3"
kapi = { version = "0.1.0", path = "../utils/kapi" }
kapi-kmodule = { version = "0.1.0", path = "../utils/kapi-kmodule" }
kdef = { version = "0.1.0", path = "../utils/kdef" }
utils-imports = { version = "0.1.0", path = "../utils/imports" }
seh = { version = "0.1.0", path = "../utils/seh" }
x86 = "0.52.0"
bitfield-struct = "0.5.6"
anyhow = { version = "1.0", default-features = false }
paste = "1.0.14"
spin = "0.9.8"
bitflags = "2.4.2"
x86_64 = "0.14.12"

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang/compiler-builtins"
features = ["mem"]

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = ["wdm", "ntstatus", "impl-default"]
