[package]
name = "utils-imports"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
obfstr = "0.4.3"
paste = "1.0.14"
windows-sys = { version = "0.52.0", features = [
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
] }
