[package]
name = "utils-imports"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
obfstr = "0.4.3"
paste = "1.0.14"
x86 = "0.52.0"
utils-kernelbase = { version = "0.1.0", path = "../kernelbase" }
log = "0.4.22"
pelite = { version = "0.10.0", default-features = false }

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = ["wdm", "ntstatus", "impl-default"]
