[package]
name = "seh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.19"
kdef = { version = "0.1.0", path = "../kdef" }
utils-imports = { version = "0.1.0", path = "../imports" }
obfstr = "0.4.3"
anyhow = { version = "1.0", default-features = false }
kapi-kmodule = { version = "0.1.0", path = "../kapi-kmodule" }
valthrun-driver-shared = { version = "0.1.0", path = "../../shared" }
lazy_link = "0.1.1"

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = [
    "wdm",
    "ntstatus",
    "impl-default"
]
