[package]
name = "vtk-wsk"
version = "0.1.0"
edition = "2021"

[dependencies]
kapi = { version = "0.1.0", path = "../kapi" }
kdef = { version = "0.1.0", path = "../kdef" }
vtk-wsk-sys = { version = "*", path = "./sys" }
obfstr = "0.4.3"
seh = { version = "0.1.0", path = "../seh" }
utils-imports = { version = "0.1.0", path = "../imports" }
kapi-kmodule = { version = "0.1.0", path = "../kapi-kmodule" }
embedded-io = { version = "0.6.0", features = ["alloc"] }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
log = "0.4.20"
lazy_link = "0.1.1"

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = ["wdm", "ntstatus", "impl-default"]

[build-dependencies]
anyhow = "1.0.72"
bindgen = "0.68.1"
cc = "1.0.79"
winreg = "0.50.0"
